tests/negative_pomidory/assert_actions.pomidor
Version: 2.08.9
Sprint: 136

@Feature smoke_test
@params cookies=cookies/facebook_cookies.csv
@test Jira-13244
Once on the landing page, click on #practice_menu_button and make sure the
#non_existent_obj is not_displayed. Then, type [[Some_text]] in #name_field

@Feature Regression
@params delete_cookies, data=pageobjects/csv_data_source.csv
!! "data=" is needed when passing many data records in a loop using <<'key'>>
@test Jira-13245
Once on the landing page, click on #practice_menu_button and
type <<FirstName>> in the #name_field and make sure
the #greeting_section contains [[Welcome, ]] text

